deploy/base/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopus-service
spec:
  selector:
    app: octopus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
