deploy/base/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octopus-ingress
  # TODO: only enable this while using traefik as ingress controller
  # annotations:
  #   kubernetes.io/ingress.class: traefik
  #   traefik.ingress.kubernetes.io/router.tls: "true"
  #   traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - "OVERLAY_ME.xyz"
      secretName: cert-api
  rules:
    - host: OVERLAY_ME.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: octopus-service
                port:
                  number: 8080
